--- a/views/rl.ejs
+++ b/views/rl.ejs
@@ -4,8 +4,8 @@
 <div class="jumbotron centered">
   <div class="container">
     <i class="fas fa-key fa-6x"></i>
-    <h1 class="display-3">Authentify Yourself</h1>
-    <p class="lead">Kindly authentify yourself by register/log in into your account.</p>
+    <h1 class="display-3">Authenticate Yourself</h1>
+    <p class="lead">Kindly authenticate yourself by register/log in into your account.</p>
     <hr>
     <a class="btn btn-light btn-lg" href="/register" role="button">Register</a>
     <a class="btn btn-dark btn-lg" href="/login" role="button">Login</a>
